# NAGE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  VERSION
docs/benchmark/terrain/: plot.py
docs/diagrams/: .gitignore  build.gradle  settings.gradle
docs/diagrams/src/main/java/: DataBus.java  NAGEShareComponents.java  NAGEShareContainersDiagram.java  Structurizr.java  (+2 more)
lib/glad/: CMakeLists.txt  glad.h  glad_glx.c  glad_glx.h
lib/glad/include/glad/: glad.h
lib/glad/old/: glad.c  glad_glx.c  glad_glx.h
lib/glad/src/: glad.c
resources/texture/skybox/: source.txt
scripts/: build.sh  mem_usage.sh  new_commit.sh
src/: main.cpp
src/common/: errormanager.cpp  errormanager.h  exception.cpp  exception.h  log.cpp  log.h  macro.h  stringextension.h
src/editor/DOTNAGE/: README.md
src/editor/QNAGE/: QNAGE.pro  README.md  glwidget.cpp  glwidget.h  main.cpp  qnage.cpp  qnage.h
src/editor/QNAGE/dialog/: dialog.cpp  dialog.h  projectdialog.cpp  projectdialog.h
src/editor/QNAGE/interface/: icamera.h  iscenemanager.h  iscenenode.h  isceneobject.h  isceneobjecttransformation.h  isceneresource.h
src/editor/QNAGE/log/: logwidget.cpp  logwidget.h  messagehandler.cpp  messagehandler.h  threadlogstream.cpp  threadlogstream.h
src/editor/QNAGE/resources/: rc.qrc
src/editor/QNAGE/scene/: scenetree.cpp  scenetree.h  scenetreenode.cpp  scenetreenode.h  scenetreenodeitem.h  scenetreenodeitemtransformations.cpp  scenetreenodeitemtransformations.h
src/editor/QNAGE/settings/: buildandrunsettings.cpp  buildandrunsettings.h  enginesettings.cpp  enginesettings.h  environmentsettings.cpp  environmentsettings.h  settingslayout.cpp  settingslayout.h  settingsnavigation.cpp  settingsnavigation.h
src/editor/QNAGE/ui/: clickablelabel.cpp  clickablelabel.h  custombutton.cpp  custombutton.h  decimallineedit.cpp  decimallineedit.h  headerbar.h  maintool.cpp  maintool.h  tabbar.cpp  tabbar.h  tabwidget.cpp  tabwidget.h
src/editor/QNAGE/widget/: glwidget.cpp  glwidget.h  loadingindicator.h  mainwidget.cpp  mainwidget.h  scenewidget.cpp  scenewidget.h  setingswidget.h  settingswidget.cpp  toolswidget.cpp  toolswidget.h  vkwidget.cpp  vkwidget.h  welcomewidget.cpp  welcomewidget.h  workspacewidget.cpp  workspacewidget.h
src/editor/QNAGE/window/: framelesswindow.cpp  framelesswindow.h  mainwindow.cpp  mainwindow.h  renderwindow.cpp  renderwindow.h
src/editor/QNAGE/wrapper/: enginebridge.cpp  enginebridge.h  inputwrapper.cpp  inputwrapper.h
src/editor/build-QNAGE-Desktop-Debug/: Makefile
src/engine/components/: const.h  image.cpp  image.h  resourcemanager.cpp  resourcemanager.h  timer.cpp  timer.h  types.h
src/engine/components/camera/: camera.cpp  camera.h
src/engine/core/: coreengine.cpp  coreengine.h  igame.cpp  igame.h  iobject.h
src/engine/core/scene/: scenemanager.cpp  scenemanager.h  scenenode.cpp  scenenode.h
src/engine/generators/: flowmap.cpp  flowmap.h  heightmap.cpp  heightmap.h  itexturegenerator.h  normalmap.cpp  normalmap.h
src/engine/io/: X11.cpp  X11.h  input.h  iwindow.cpp  iwindow.h  key.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  mousebutton.h  window.cpp  window.h  x11.cpp  x11.h  x11openglwindow.cpp  x11openglwindow.h  x11window.cpp  x11window.h
src/engine/math/: math3D_deprecated.cpp  math3D_deprecated.h
src/engine/math/NAGEMath/: nagemathcommon.h  nagemathmatrix.h  nagemathquaternion.h  nagemathvector.h
src/engine/render/: color.cpp  color.h  framebuffer.cpp  framebuffer.h  glrenderengine.cpp  glrenderengine.h  iobject.cpp  iobject.h  irenderengine.cpp  irenderengine.h  projection.cpp  projection.h  renderableobject.cpp  renderableobject.h  resource.cpp  resource.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h  vertex.h  vertexhelper.h
src/engine/render/collision/: aabb.cpp  aabb.h  bs.cpp  bs.h  collisionplane.cpp  collisionplane.h  plane.cpp  plane.h
src/engine/render/culling/: frustumculling.cpp  frustumculling.h
src/engine/render/model/: material.cpp  material.h  materialtype.cpp  materialtype.h  mesh.cpp  mesh.h  model.cpp  model.h  texture.cpp  texture.h
src/engine/shader/: atmospheric-scattering.frag  atmospheric-scattering.vert  basic.frag  basic.vert  basicColor.frag  basicColor.vert  basicTexture.frag  basicTextureBlending.frag  basicTextureBlending.vert  basicTextureColor.frag  basicTextureColor.vert  cdlodterrain.frag  cdlodterrain.vert  cdlodterrain2.frag  cdlodterrain2.vert  cdlodwater.frag  cdlodwater.vert  cubemapSkybox.frag  cubemapSkybox.vert  dayNight.frag  dayNight.vert  geoclipmap.frag  geoclipmap.vert  lamp.frag  lamp.vert  lighting.frag  lighting.vert  terrain.frag  terrain.vert
src/engine/util/: objectloader.cpp  objectloader.h  random.h  size.h  stl.h  threadpool.h
src/engine/world/light/: directionallight.cpp  directionallight.h  directionallightobject.cpp  directionallightobject.h  ilight.cpp  ilight.h  light.cpp  light.h  pointlight.cpp  pointlight.h  pointlightobject.cpp  pointlightobject.h  sun.cpp  sun.h
src/engine/world/plants/: lsystem.cpp  lsystem.h
src/engine/world/primitives/: cube.cpp  cube.h  gridmesh.cpp  gridmesh.h  plane.cpp  plane.h  primitive.cpp  primitive.h  sphere.cpp  sphere.h
src/engine/world/procedural/: diamondsquare.h  lsystem.h  perlinnoise.h  simplexnoise.h
src/engine/world/skybox/: daynightskybox.cpp  daynightskybox.h  daynightskydome.cpp  daynightskydome.h  skybox.cpp  skybox.h  sunlight.cpp  sunlight.h
src/engine/world/terrain/: cdlodterrain.cpp  cdlodterrain.h  cdlodterrainchunk.cpp  cdlodterrainchunk.h  geoclipmapterrain.cpp  geoclipmapterrain.h  heightmap.cpp  heightmap.h  iterrain.cpp  iterrain.h  quadtree.cpp  quadtree.h  quadtreenode.cpp  quadtreenode.h  terrain.cpp  terrain.h  terrainchunk.cpp  terrainchunk.h  terrainlod.cpp  terrainlod.h
src/engine/world/water/: cdlodwater.cpp  cdlodwater.h  iwater.cpp  iwater.h  waterframebuffer.cpp  waterframebuffer.h  waterreflection.cpp  waterreflection.h  waterrefraction.cpp  waterrefraction.h
src/engine/wrapper/: glwrapper.h
src/game/: game.cpp  game.h
(+51 files in other folders)
